testing/helpers.php in autoload

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     "autoload": {
         "psr-4": {
             "Lembarek\\Api\\": "src"
-        }
+        },
+        "files": [
+          "src/testing/helpers.php"
+        ]
     },
     "scripts": {
         "test": "phpunit"
